<resources>

    <string name="sortByName">Sort by name</string>
    <string name="deleteEverything">Remove all contacts</string>
    <string name="remove">Remove</string>
    <string name="app_name">FriendsCompolsury</string>
    <string name="save_location">Save Location</string>
    <string name="show_map">Show Map</string>
    <string name="getPerson">Get Person</string>
    <string name="addPerson">Add Person</string>
    <string name="Detail">Details</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="URL">URL</string>
    <string name="Phone">Phone</string>
    <string name="SMS">SMS</string>
    <string name="Cam">Cam</string>
    <string name="Call">Call</string>
    <string name="Home">Home</string>
    <string name="NewContact">New Contact</string>
    <string name="SaveContact">Save</string>
    <string name="Update">Update</string>
    <string name="Address">Address</string>
    <string name="Birthday">Birthday</string>
    <string name="activityClass">activityClass</string>
    <string name="friendKey">friend</string>
    <string name="synchronizeContacts">Synchronize Contracts</string>
</resources>
