<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.friendscompolsury.DetailActivity">

    <TextView
        android:id="@+id/tvHeader"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Detail" />

    <ImageView
        android:id="@+id/pictureView"
        android:layout_width="match_parent"
        android:onClick="goToCamera"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="284dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView android:text="@string/Name" />

            <EditText
                android:id="@+id/etName"
                android:hint="@string/Name"
                android:inputType="textPersonName|text" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView android:text="@string/Email" />

            <EditText
                android:id="@+id/etEmail"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView android:text="@string/URL" />

            <EditText
                android:id="@+id/etLocation"
                android:hint="@string/URL"
                android:inputType="textUri|textWebEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView android:text="@string/Phone" />

            <EditText
                android:id="@+id/etPhone"
                android:hint="@string/Phone"
                android:inputType="number|phone" />
        </TableRow>

        <!--
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Button
                android:id="@+id/btnCancel"
                android:text="Cancel"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnOk"
                android:text="OK"
                android:layout_gravity="center"/>
        </TableRow>
        -->
    </TableLayout>

    <LinearLayout android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="4"
        android:padding="2dp" android:layout_margin="1dp">

        <Button
            android:id="@+id/btnSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="smsButton"
            android:text="@string/SMS" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="camButton"
            android:text="@string/Cam" />

        <Button
            android:id="@+id/btnCALL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="callButton"

            android:text="@string/Call" />

        <Button
            android:id="@+id/btnEMAIL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="mailButton"

            android:text="@string/Email" />

        <Button
            android:id="@+id/btnLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="getLocation"

            android:text="@string/Home" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="421dp"
            android:layout_height="match_parent" />
    </FrameLayout>


</LinearLayout>